attempt at fixing whitespace under footer

--- a/css/index.css
+++ b/css/index.css
@@ -275,7 +275,9 @@ span > p {
 .appContainer {
 	background: #000000; 
     height: 100%;    
-    width: 100%;    
+    width: 100%;
+    position: absolute;
+    /*position: fixed; */   
 }
 
 #appContainerScreen {
